[tool.poetry]
name = "rostov-guidebot"
version = "0.1.0"
description = ""
authors = ["dimon0804 <dimongamedeveloper@tandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.15.0"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"

[tool.mypy]
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
